VANITYS12:Refactor ReviewRepositoryAdapter to simplify product-user relationship handling and enhance test cases for clarity